Updated JSON file for Alron's data
Note: We probably shouldn’t Alron’s data

--- a/Visualization/2.0/index.html
+++ b/Visualization/2.0/index.html
@@ -22,7 +22,7 @@
     </style>
 
     <script type="text/javascript" src="assets/js/graph.js"></script>
-    <script type="text/javascript">readGraphJSON("miserables.json");</script>
+    <script type="text/javascript">readGraphJSON("vis.json");</script>
 
       
 </head>
