Visualization stuff and fixed modularity. Do not run DHC, still fixing (yes, there's something wrong)

--- a/Visualization/2.0/index.html
+++ b/Visualization/2.0/index.html
@@ -22,7 +22,7 @@
     </style>
 
     <script type="text/javascript" src="assets/js/graph.js"></script>
-    <script type="text/javascript">readGraphJSON("school_vis.json");</script>
+    <script type="text/javascript">readGraphJSON("vis.json");</script>
 
       
 </head>
