Visualization: Added option for directed graph and fixed error in Chrome

--- a/Visualization/2.0/index.html
+++ b/Visualization/2.0/index.html
@@ -22,9 +22,6 @@
     </style>
 
     <script type="text/javascript" src="assets/js/graph.js"></script>
-    <script type="text/javascript">readGraphJSON("vis.json");</script>
-
-      
 </head>
 
 <body>
@@ -37,6 +34,9 @@
         }], "*")
     }
     </script>
+
+    <input id="filename" type="hidden" value="school_vis_100.json"/>
+    <input id="directed" type="hidden" value="true"/>
 
 </body>
 
