initial code for hashtags

--- a/Visualization/2.0/index.html
+++ b/Visualization/2.0/index.html
@@ -35,7 +35,7 @@
     }
     </script>
 
-    <input id="filename" type="hidden" value="school_vis_100.json"/>
+    <input id="filename" type="hidden" value="alron_vis.json"/>
     <input id="directed" type="hidden" value="true"/>
 
 </body>
