Fixed word cloud content

--- a/Visualization/2.0/index.html
+++ b/Visualization/2.0/index.html
@@ -48,9 +48,9 @@
     <div id="graph"></div>
 
     <!-- <button id="saveButton">Turn to Static Image</button> -->
-    <input id="filename" type="hidden" value="hashvis28.json"/>
+    <input id="filename" type="hidden" value="vis.json"/>
     <input id="directed" type="hidden" value="true"/>
-    <input id="wordFile" type="hidden" value="wordCounts5.json"/>
+    <input id="wordFile" type="hidden" value="wordCounts6.json"/>
 </body>
 
 </html>
