--- a/Visualization/2.0/index.html
+++ b/Visualization/2.0/index.html
@@ -46,6 +46,7 @@
     </script>
 
     <div id="graph"></div>
+    <div id="wordCloud"></div>
 
     <!-- <button id="saveButton">Turn to Static Image</button> -->
     <input id="filename" type="hidden" value="vis.json"/>
