With URL parameters

--- a/Visualization/2.0/index.html
+++ b/Visualization/2.0/index.html
@@ -32,6 +32,7 @@
 
     <script type="text/javascript" src="assets/js/graph.js"></script>
     <script type="text/javascript" src="assets/js/wordCloud.js"></script>
+    <script type="text/javascript" src="assets/js/misc.js"></script>
 </head>
 
 <body>
@@ -49,9 +50,6 @@
     <div id="wordCloud"></div>
 
     <!-- <button id="saveButton">Turn to Static Image</button> -->
-    <input id="filename" type="hidden" value="vis.json"/>
-    <input id="directed" type="hidden" value="true"/>
-    <input id="wordFile" type="hidden" value="wordCounts6.json"/>
 </body>
 
 </html>
