--- a/Visualization/2.0/index.html
+++ b/Visualization/2.0/index.html
@@ -20,13 +20,14 @@
             stroke-width: 1.5px;
         }
         .link {
-            stroke: #999;
+            stroke: rgb(100,100,100);
             stroke-opacity: .6;
         }
 
         .blendCircle {
             mix-blend-mode: multiply;
         }
+
     </style>
     <link type="text/css" rel="stylesheet" href="assets/css/wordCloud.css"/>
 
